src/test/deca/context/valid/created/testConvFloat/ConvFloatMinus.deca
// Description :
//    Teste de la conversion au type float dans les operations arithmetiques
//
// Résultats :
//    ok

{
    int a;
    float b;
    float c;
    c = 6.0;
    a = 1;
    b = a-c;
}

